<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <!--        User name-->
    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint_editText"
        android:inputType="textCapWords"/>

    <!--Type of Coffee heading-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/type_of_coffee"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <!--        Type of Coffee-->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_marginBottom="8dp"
        android:entries="@array/menu" />

    <!--Toppings heading-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/toppings_on_coffee"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <!--Topping name: whipped cream-->
    <CheckBox
        android:id="@+id/whippedCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whipped_cream"
        android:textSize="16sp" />

    <!--Topping name: chocolate-->
    <CheckBox
        android:id="@+id/chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="16sp" />

    <!--Quantity heading-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity"
        android:textAllCaps="true" />

    <!-- decrement | quantity number | increment-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="@string/decrement_text" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/quantity_2_number"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="increment"
            android:text="@string/increment_symbol" />


    </LinearLayout>
</LinearLayout>